Fix spacing on homepage

--- a/app/assets/stylesheets/revised/pages/landing/_home.scss
+++ b/app/assets/stylesheets/revised/pages/landing/_home.scss
@@ -13,14 +13,12 @@
 
 .root-landing-banner-header {
   width: 100%;
-  margin-bottom: 10px;
+  margin-bottom: 0;
 }
 
 .root-landing-banner-subheader {
   width: 100%;
-  margin-top: 10px;
-  margin-left: 0;
-  margin-right: 0;
+  margin: 0;
 
   .subheader-tile:first-of-kind {
     padding-right: 5px;
